# ICM42688

./: CMakeLists.txt  CMakePresets.json  icm-42688-config.cmake.in
source/: device.cpp  device.h  fifo.cpp  fifo.h  hal.h  icm-42688.cpp  icm-42688.h  registers.h
